update portfolio links and about me sections

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 					</div>
 					<h2>Scott Snyder</h2>
 					<div class="separator centered"></div>
-					<p class="title">Software Engineer.</p>
+					<p class="title">Software Engineer</p>
 					</div>
 				</div>
 			</div>
@@ -186,7 +186,7 @@
 							<a href="#why-me-panel" aria-controls="why-me-panel" role="tab" data-toggle="tab">Why Me</a>
 						</li>
 						<li role="presentation">
-							<a href="#my-vision-panel" aria-controls="my-vision-panel" role="tab" data-toggle="tab">My Vision</a>
+							<a href="#my-vision-panel" aria-controls="my-vision-panel" role="tab" data-toggle="tab">Why Change</a>
 						</li>
 					</ul>
 					<!-- Tabs Panel -->
@@ -196,20 +196,22 @@
 							<h4>About Me</h4>
 							<div class="separator"></div>
 							<p class="para"><span>Hello, <br> I'm Scott, a Software Developer experienced building web applications using JavaScript, Ruby on Rails, and React/Redux.</span></p>
-							<p class="para">About me placeholder</p>
+							<p class="para">I'm passionate about creating clean, efficient, quality code and finding new intersections between creativity and technology. I'm ready to solve tomorrow's problems today, and I'm excited to see what new challenges lie ahead!</p>
 						</div>
 						<!-- Why Me Panel -->
 						<div role="tabpanel" class="tab-pane fade" id="why-me-panel">
-							<h4>Why to choose me</h4>
+							<h4>What makes me different</h4>
 							<div class="separator"></div>
-							<p class="para">Assertively target cooperative experiences whereas tactical total linkage. Intrinsicly transition end-to-end synergy via low-risk high-yield internal or "organic" sources. Assertively synergize dynamic scenarios through user friendly services. Seamlessly communicate.</p>
+							<p class="para">I've always had a passion for solving complex problems and understanding how things work. I love solving problems, learning new technologies, and understanding how things work. </p>
 							<p class="para">Competently exploit just in time synergy and competitive human capital. Efficiently maintain functionalized "outside the box" thinking for cooperative channels. Energistically.</p>
 						</div>
 						<!-- My Vision Panel -->
 						<div role="tabpanel" class="tab-pane fade" id="my-vision-panel">
-							<h4>Here is My Vision</h4>
+							<h4>Why I transitioned to tech</h4>
 							<div class="separator"></div>
-							<p class="para">Seamlessly administrate team building opportunities after sustainable portals. Phosfluorescently incentivize cost effective action items without innovative meta-services. Globally monetize backward-compatible portals and performance based bandwidth. Distinctively underwhelm cost effective.</p>
+							<p class="para">For as long as I can remember, I've had a passion for understanding how things work and problem solving. When</p>
+							<p class="para">Technology has always been a signficant part of my life, ever since 5th grade when we got our first family computer.</p>
+							<p class="para">I studied business/accounting in school because I dreamt of running my own business one day and wanted to learn the ins and outs.</p>
 						</div>
 					</div>
 				</div>
@@ -631,12 +633,12 @@
 					      </div>
 					      <div class="modal-body">
 					        <img class="center-block img-responsive thumbnail" src="http://placehold.it/800x600" alt="project-3">
-					        <h4>HighStats</h4>
+					        <h4>HighStats (in progress)</h4>
 					        <div class="separator"></div>
 					        <p class="para subtitle">Backend Web Developer</p>
-					        <p class="para project-description">Efficiently reinvent 2.0 manufactured products after client-focused relationships. Distinctively architect enterprise-wide information vis-a-vis one-to-one vortals. <br> Collaboratively incentivize 2.0 interfaces before next-generation scenarios. Proactively repurpose backward-compatible schemas for progressive e-commerce. Intrinsicly whiteboard resource-leveling methods of empowerment before out-of-the-box quality vectors. Assertively deliver multidisciplinary meta-services for diverse technologies. Dramatically leverage.</p>
-					        <a href="#" class="btn btn-custom btn-custom-reverse">Live Preview</a>
-					        <a href="#contact" class="btn btn-custom dark scroll-link" data-dismiss="modal">Start Project</a>
+					        <p class="para project-description">iOS on Rails <br> Efficiently reinvent 2.0 manufactured products after client-focused relationships. Distinctively architect enterprise-wide information vis-a-vis one-to-one vortals. <br> Collaboratively incentivize 2.0 interfaces before next-generation scenarios. Proactively repurpose backward-compatible schemas for progressive e-commerce. Intrinsicly whiteboard resource-leveling methods of empowerment before out-of-the-box quality vectors. Assertively deliver multidisciplinary meta-services for diverse technologies. Dramatically leverage.</p>
+					        <a href="http://highstatsonline.com/" class="btn btn-custom btn-custom-reverse">Live</a>
+					        <a href="https://github.com/AustinWood/highstats-backend" class="btn btn-custom dark">Github</a>
 					      </div>
 					    </div>
 					  </div>
@@ -665,12 +667,12 @@
 					      </div>
 					      <div class="modal-body">
 					        <img class="center-block img-responsive thumbnail" src="http://placehold.it/800x600" alt="project-4">
-					        <h4>PhotoRails</h4>
+					        <h4>PhotoRails (in progress)</h4>
 					        <div class="separator"></div>
 					        <p class="para subtitle">Fullstack Web Developer</p>
 					        <p class="para project-description"> Basic photo sharing web app served on a custom built MVC framework based on Rails. <br> Created lightweight ORM for simple, streamlined database interactions. Utilized metaprogramming for a DRY implementation of basic Rails functionality. Includes routes/router, sessions data, flash, and CSRF protection.</p>
-					        <a href="#" class="btn btn-custom btn-custom-reverse">Live Preview</a>
-					        <a href="#contact" class="btn btn-custom dark scroll-link" data-dismiss="modal">Start Project</a>
+					        <a href="#portfolio" class="btn btn-custom btn-custom-reverse">Live (coming soon)</a>
+					        <a href="https://github.com/sijos/myRails" class="btn btn-custom dark">Github</a>
 					      </div>
 					    </div>
 					  </div>
