update hs project description

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 				<div class="mix backend col-md-4 col-sm-6 col-xs-12" data-my-order="3">
 					<div class="project" data-toggle="modal" data-target="#modal-3">
 						<div class="project-img-wrapper">
-							<img class="center-block img-responsive" src="http://placehold.it/800x600" alt="project-3">
+							<img class="center-block img-responsive" src="img/projects/highstats.png" alt="project-3">
 						</div>
 						<div class="img-overlay">
 							<div class="overlay-text">
@@ -632,11 +632,11 @@
 					        <h4 class="modal-title" id="label_3">HighStats</h4>
 					      </div>
 					      <div class="modal-body">
-					        <img class="center-block img-responsive thumbnail" src="http://placehold.it/800x600" alt="project-3">
+					        <img class="center-block img-responsive thumbnail" src="img/projects/highstats.png" alt="project-3">
 					        <h4>HighStats (in progress)</h4>
 					        <div class="separator"></div>
 					        <p class="para subtitle">Backend Web Developer</p>
-					        <p class="para project-description">iOS on Rails <br> Efficiently reinvent 2.0 manufactured products after client-focused relationships. Distinctively architect enterprise-wide information vis-a-vis one-to-one vortals. <br> Collaboratively incentivize 2.0 interfaces before next-generation scenarios. Proactively repurpose backward-compatible schemas for progressive e-commerce. Intrinsicly whiteboard resource-leveling methods of empowerment before out-of-the-box quality vectors. Assertively deliver multidisciplinary meta-services for diverse technologies. Dramatically leverage.</p>
+					        <p class="para project-description">iOS on Rails <br> -Create RESTful APIs within a Rails backend environment that process and serve data seamlessly to an iOS frontend. Implement backend user authentication system with 184-bit encryption that maintains user's session data in sync with mobile frontend. Efficiently structure database calls to avoid N+1 queries on associated data relations.</p>
 					        <a href="http://highstatsonline.com/" class="btn btn-custom btn-custom-reverse">Live</a>
 					        <a href="https://github.com/AustinWood/highstats-backend" class="btn btn-custom dark">Github</a>
 					      </div>
