add photorails images

--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
 				<div class="mix fullstack col-md-4 col-sm-6 col-xs-12" data-my-order="4">
 					<div class="project" data-toggle="modal" data-target="#modal-4">
 						<div class="project-img-wrapper">
-							<img class="center-block img-responsive" src="http://placehold.it/800x600" alt="project-4">
+							<img class="center-block img-responsive" src="img/projects/photorails.png" alt="project-4">
 						</div>
 						<div class="img-overlay">
 							<div class="overlay-text">
@@ -666,7 +666,7 @@
 					        <h4 class="modal-title" id="label_4">PhotoRails</h4>
 					      </div>
 					      <div class="modal-body">
-					        <img class="center-block img-responsive thumbnail" src="http://placehold.it/800x600" alt="project-4">
+					        <img class="center-block img-responsive thumbnail" src="img/projects/photorails.png" alt="project-4">
 					        <h4>PhotoRails (in progress)</h4>
 					        <div class="separator"></div>
 					        <p class="para subtitle">Fullstack Web Developer</p>
