update contact info

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 					<h2 class="wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">Look interesting?</h2>
 					<div class="separator centered wow fadeInUp" data-wow-duration="1s" data-wow-offset="200"></div>
 					<p class="para wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">Reach out to me at any time to discuss these in further detail or for any questions!</p>
-					<a href="#contact" class=" scroll-link btn btn-custom dark wow bounceIn" data-wow-duration="0.6s" data-wow-offset="200">Contact</a>
+					<a href="#contact" class=" scroll-link btn btn-custom dark wow bounceIn" data-wow-duration="0.6s" data-wow-offset="200">Let's chat!</a>
 				</div>
 			</div>
 		</div>
@@ -698,9 +698,9 @@
 			<div class="row">
 				<div class="col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-offset="200">
 					<div class="section-intro">
-						<h2>Keep in touch</h2>
+						<h2>Contact</h2>
 						<div class="separator centered"></div>
-						<p class="para">Here you can find me. I'd like to hear from you all. You can hire me, ask me about anything or buy me coffee.</p>
+						<p class="para">Want to talk? Here's how to reach me:</p>
 					</div>
 				</div>	
 			</div>
@@ -711,14 +711,14 @@
 							<div class="info-wrapper">
 								<i class="fa fa-home fa-fw"></i>
 								<h4>My Place</h4>
-								<p class="para">1234 st, Darlon city, Egypt <br> 414220</p>
+								<p class="para">2021 Pine St, San Francisco, CA <br> 94115</p>
 							</div>	
 						</div>
 						<div class="col-sm-6 col-xs-12 call-info wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 							<div class="info-wrapper">
 								<i class="fa fa-phone fa-fw"></i>
 								<h4>Call Me</h4>
-								<p class="para">(+020) 12 221 187 22 <br> (+020) 11 221 187 21</p>
+								<p class="para">(+1) 919 395 7005</p>
 							</div>	
 						</div>
 					</div>
@@ -727,14 +727,14 @@
 							<div class="info-wrapper">
 								<i class="fa fa-envelope-o fa-fw"></i>
 								<h4>Send Message</h4>
-								<p class="para">info@prema.ca <br> admin@prema.ca</p>
+								<p class="para"><ssny88@gmail class="com"></ssny88@gmail></p>
 							</div>	
 						</div>
 						<div class="col-sm-6 col-xs-12 call-info wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 							<div class="info-wrapper">
 								<i class="fa fa-clock-o fa-fw"></i>
 								<h4>Work Time</h4>
-								<p class="para">Sat - Thr : 8.00 - 16.00 <br> Friday: Holiday</p>
+								<p class="para">Flexible! <br> I work when needed</p>
 							</div>
 						</div>
 					</div>
@@ -743,9 +743,9 @@
 					<!-- Start Contact Form -->
 					<form data-toggle="validator" id="contact-form" role="form">
 						<div class="form-intro">
-							<h4>Leave Me A Message</h4>
+							<h4>Send Me A Message</h4>
 							<div class="separator"></div>
-							<p class="para">You can ask me about anything here, just type your name and e-mail and I'll answer you as soon as possible</p>
+							<p class="para">Type your name, e-mail and message below and I'll answer you as soon as possible</p>
 						</div>
 						<div class="form-group">
 							<div class="input-group">
