change default color scheme

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<!-- Custom styles css file -->
 	<link rel="stylesheet" href="css/style.css">
 	<!-- Color styles css file -->
-	<link rel="stylesheet" href="css/colors/color-1.css">
+	<link rel="stylesheet" href="css/colors/color-10.css">
 
 
 	<!--[if lt IE 9]>
@@ -727,7 +727,7 @@
 							<div class="info-wrapper">
 								<i class="fa fa-envelope-o fa-fw"></i>
 								<h4>Send Message</h4>
-								<p class="para"><ssny88@gmail class="com"></ssny88@gmail></p>
+								<p class="para"><ssny88@gmail class="com">ssny88@gmail</p>
 							</div>	
 						</div>
 						<div class="col-sm-6 col-xs-12 call-info wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
