--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 	<link rel="stylesheet" href="css/style.css">
 	<!-- Color styles css file -->
 	<link rel="stylesheet" href="css/colors/color-10.css">
+	<!--Import Devicon code language icons-->
+	<link rel="stylesheet" href="devicon-master/devicon.css">
 
 
 	<!--[if lt IE 9]>
@@ -196,7 +198,7 @@
 							<h4>About Me</h4>
 							<div class="separator"></div>
 							<p class="para"><span>Hello, <br> I'm Scott, a Software Developer experienced building web applications using JavaScript, Ruby on Rails, and React/Redux.</span></p>
-							<p class="para">I'm passionate about creating clean, efficient, quality code and finding new intersections between creativity and technology. I'm ready to solve tomorrow's problems today, and I'm excited to see what new challenges lie ahead!</p>
+							<p class="para">I'm passionate about writing clean, efficient, quality code and finding new intersections between creativity and technology. I'm ready to solve tomorrow's problems today, and I'm excited to see what new challenges lie ahead!</p>
 						</div>
 						<!-- Why Me Panel -->
 						<div role="tabpanel" class="tab-pane fade" id="why-me-panel">
@@ -452,7 +454,7 @@
 						<span class="skill-timer" data-from="0" data-to="90" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
-					<h3>Javascript</h3>
+					<h3>Javascript <i class="devicon-javascript-plain"></i></h3>
 				</div>
 				<!-- Skill No. ( 2 ) -->
 				<div class="skill col-md-4 col-sm-6">
@@ -460,7 +462,7 @@
 						<span class="skill-timer" data-from="0" data-to="95" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
-					<h3>Ruby on Rails</h3>
+					<h3>Ruby on Rails <i class="devicon-rails-plain"></i></h3>
 				</div>
 				<!-- Skill No. ( 3 ) -->
 				<div class="skill col-md-4 col-sm-6">
@@ -468,7 +470,7 @@
 						<span class="skill-timer" data-from="0" data-to="85" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
-					<h3>React</h3>
+					<h3>React <i class="devicon-react-original"></i></h3>
 				</div>
 				<!-- Skill No. ( 4 ) -->
 				<div class="skill col-md-4 col-sm-6">
@@ -484,7 +486,7 @@
 						<span class="skill-timer" data-from="0" data-to="65" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
-					<h3>jQuery</h3>
+					<h3>jQuery <i class="devicon-jquery-plain"></i></h3>
 				</div>
 				<!-- Skill No. ( 6 ) -->
 				<div class="skill col-md-4 col-sm-6">
@@ -492,7 +494,7 @@
 						<span class="skill-timer" data-from="0" data-to="85" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
-					<h3>HTML5</h3>
+					<h3>HTML <i class="devicon-html5-plain"></i></h3>
 				</div>
 				<!-- Skill No. ( 7 ) -->
 				<div class="skill col-md-4 col-sm-6">
@@ -500,7 +502,7 @@
 						<span class="skill-timer" data-from="0" data-to="70" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
-					<h3>CSS3</h3>
+					<h3>CSS <i class="devicon-css3-plain"></i></h3>
 				</div>
 				<!-- Skill No. ( 8 ) -->
 				<div class="skill col-md-4 col-sm-6">
@@ -508,7 +510,7 @@
 						<span class="skill-timer" data-from="0" data-to="85" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
-					<h3>SQL</h3>
+					<h3>SQL / PostgreSQL <i class="devicon-postgresql-plain"></i></h3>
 				</div>
 				<!-- Skill No. ( 9 ) -->
 				<div class="skill col-md-4 col-sm-6">
@@ -516,7 +518,7 @@
 						<span class="skill-timer" data-from="0" data-to="50" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
-					<h3>Java</h3>
+					<h3>Java <i class="devicon-java-plain"></i></h3>
 				</div>
 			</div>
 		</div>
@@ -536,10 +538,10 @@
 				</div>
 			</div>
 			<div class="controls">
-				<button class="filter btn btn-custom" data-filter="all" data-toggle="tooltip" data-placement="top" title="12">All</button>
-				<button class="filter btn btn-custom" data-filter=".frontend" data-toggle="tooltip" data-placement="top" title="4">Frontend</button>
-				<button class="filter btn btn-custom" data-filter=".backend" data-toggle="tooltip" data-placement="top" title="5">Backend</button>
-				<button class="filter btn btn-custom" data-filter=".fullstack" data-toggle="tooltip" data-placement="top" title="5">Fullstack</button>
+				<button class="filter btn btn-custom" data-filter="all" data-toggle="tooltip" data-placement="top" title="4">All</button>
+				<button class="filter btn btn-custom" data-filter=".frontend" data-toggle="tooltip" data-placement="top" title="1">Frontend</button>
+				<button class="filter btn btn-custom" data-filter=".backend" data-toggle="tooltip" data-placement="top" title="1">Backend</button>
+				<button class="filter btn btn-custom" data-filter=".fullstack" data-toggle="tooltip" data-placement="top" title="2">Fullstack</button>
 			</div>
 			<div id="Container" class="row">
 				<!-- Project 1 -->
@@ -636,7 +638,7 @@
 					        <h4>HighStats (in progress)</h4>
 					        <div class="separator"></div>
 					        <p class="para subtitle">Backend Web Developer</p>
-					        <p class="para project-description">iOS on Rails <br> -Create RESTful APIs within a Rails backend environment that process and serve data seamlessly to an iOS frontend. Implement backend user authentication system with 184-bit encryption that maintains user's session data in sync with mobile frontend. Efficiently structure database calls to avoid N+1 queries on associated data relations.</p>
+					        <p class="para project-description">iOS on Rails <br> Create RESTful APIs within a Rails backend environment that process and serve data seamlessly to an iOS frontend. Implement backend user authentication system with 184-bit encryption that maintains user's session data in sync with mobile frontend. Efficiently structure database calls to avoid N+1 queries on associated data relations.</p>
 					        <a href="http://highstatsonline.com/" class="btn btn-custom btn-custom-reverse">Live</a>
 					        <a href="https://github.com/AustinWood/highstats-backend" class="btn btn-custom dark">Github</a>
 					      </div>
