first updates to about me section

--- a/index.html
+++ b/index.html
@@ -188,30 +188,31 @@
 							<a href="#why-me-panel" aria-controls="why-me-panel" role="tab" data-toggle="tab">Why Me</a>
 						</li>
 						<li role="presentation">
-							<a href="#my-vision-panel" aria-controls="my-vision-panel" role="tab" data-toggle="tab">Why Change</a>
+							<a href="#my-vision-panel" aria-controls="my-vision-panel" role="tab" data-toggle="tab">What Else</a>
 						</li>
 					</ul>
 					<!-- Tabs Panel -->
 					<div class="tab-content">
 						<!-- About Me Panel -->
 						<div role="tabpanel" class="tab-pane fade in active" id="about-me-panel">
-							<h4>About Me</h4>
+							<h4>Scott, in Summary</h4>
 							<div class="separator"></div>
 							<p class="para"><span>Hello, <br> I'm Scott, a Software Developer experienced building web applications using JavaScript, Ruby on Rails, and React/Redux.</span></p>
-							<p class="para">I'm passionate about writing clean, efficient, quality code and finding new intersections between creativity and technology. I'm ready to solve tomorrow's problems today, and I'm excited to see what new challenges lie ahead!</p>
+							<p class="para">I'm passionate about writing clean, efficient, quality code and discovering how creativity and technology combine to solve tomorrow's problems today. I'm excited to see what new challenges lie ahead!</p>
 						</div>
 						<!-- Why Me Panel -->
 						<div role="tabpanel" class="tab-pane fade" id="why-me-panel">
 							<h4>What makes me different</h4>
 							<div class="separator"></div>
-							<p class="para">I've always had a passion for solving complex problems and understanding how things work. I love solving problems, learning new technologies, and understanding how things work. </p>
-							<p class="para">Competently exploit just in time synergy and competitive human capital. Efficiently maintain functionalized "outside the box" thinking for cooperative channels. Energistically.</p>
+							<p class="para">I am entering into the world of software development with a unique perspective. Growing up obsessed with music and studying it throughout my entire life has taught me the value of harnessing the creativity inside individuals and encouraging them to explore it further.  </p>
+							<p class="para">I've also spent 5+ years in finance and accounting supporting key stakeholders of businesses, managing multiple projects and deadlines and coaching/mentoring young associates. I've gained incredible time management skills learned how to effectively communicate and build professional relationships to a wide variety of personality types, and I will maintain those traits as I venture into my next professional endeavor.</p>
+							<p class="para">Code is run by computers, but software is written by people, for people. I beleive that the best software is written by teams of creative individuals in highly collaborative environments and I will come to work every day with this mentality, helping to cultivate a more fun, productive and collaborative workspace.</p>
 						</div>
 						<!-- My Vision Panel -->
 						<div role="tabpanel" class="tab-pane fade" id="my-vision-panel">
-							<h4>Why I transitioned to tech</h4>
+							<h4>My life away from the computer</h4>
 							<div class="separator"></div>
-							<p class="para">For as long as I can remember, I've had a passion for understanding how things work and problem solving. When</p>
+							<p class="para">For as long as I can remember, I've had a passion for solving complex problems and understanding how things. n</p>
 							<p class="para">Technology has always been a signficant part of my life, ever since 5th grade when we got our first family computer.</p>
 							<p class="para">I studied business/accounting in school because I dreamt of running my own business one day and wanted to learn the ins and outs.</p>
 						</div>
@@ -470,7 +471,7 @@
 						<span class="skill-timer" data-from="0" data-to="85" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
-					<h3>React <i class="devicon-react-original"></i></h3>
+					<h3>React / Redux <i class="devicon-react-original"></i></h3>
 				</div>
 				<!-- Skill No. ( 4 ) -->
 				<div class="skill col-md-4 col-sm-6">
@@ -478,12 +479,12 @@
 						<span class="skill-timer" data-from="0" data-to="75" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
-					<h3>Redux</h3>
+					<h3>Git <i class="devicon-git-plain"></i></h3>
 				</div>
 				<!-- Skill No. ( 5 ) -->
 				<div class="skill col-md-4 col-sm-6">
 					<div class="chart" data-percent="85">
-						<span class="skill-timer" data-from="0" data-to="65" data-speed="1500"></span>
+						<span class="skill-timer" data-from="0" data-to="60" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
 					<h3>jQuery <i class="devicon-jquery-plain"></i></h3>
@@ -620,7 +621,7 @@
 						</div>
 						<div class="img-overlay">
 							<div class="overlay-text">
-								<h4>HighStats</h4>
+								<h4>HighStats (in progress)</h4>
 								<p>Backend Web Developer</p>
 							</div>
 						</div>
@@ -654,7 +655,7 @@
 						</div>
 						<div class="img-overlay">
 							<div class="overlay-text">
-								<h4>PhotoRails</h4>
+								<h4>PhotoRails (in progress)</h4>
 								<p>Fullstack Web Developer</p>
 							</div>
 						</div>
@@ -745,9 +746,9 @@
 					<!-- Start Contact Form -->
 					<form data-toggle="validator" id="contact-form" role="form">
 						<div class="form-intro">
-							<h4>Send Me A Message</h4>
+							<h4>Send Me A Message:</h4>
 							<div class="separator"></div>
-							<p class="para">Type your name, e-mail and message below and I'll answer you as soon as possible</p>
+							<p class="para">Type your name, e-mail and message below and I'll get back to you as soon as possible</p>
 						</div>
 						<div class="form-group">
 							<div class="input-group">
