update about me section paragraphs

--- a/index.html
+++ b/index.html
@@ -212,9 +212,8 @@
 						<div role="tabpanel" class="tab-pane fade" id="my-vision-panel">
 							<h4>My life away from the computer</h4>
 							<div class="separator"></div>
-							<p class="para">For as long as I can remember, I've had a passion for solving complex problems and understanding how things. n</p>
-							<p class="para">Technology has always been a signficant part of my life, ever since 5th grade when we got our first family computer.</p>
-							<p class="para">I studied business/accounting in school because I dreamt of running my own business one day and wanted to learn the ins and outs.</p>
+							<p class="para">When I'm not coding, one of my other passions is music. Whether playing around on my guitar, searching the Internet for the new tracks/albums or attending live concerts around the bay area, I'm constantly working to expand my musical horizon.</p>
+							<p class="para">I also love the outdoors. I try to take any and every opportunity to get outside, but some of my favorite activties include hiking, biking, rock climbing, skiing/snowboarding and camping as well as my lateset endeavour: surfing.</p>
 						</div>
 					</div>
 				</div>
