add social media links

--- a/index.html
+++ b/index.html
@@ -788,13 +788,13 @@
 					<h4>follow me here :</h4>
 					<!-- Follow Me Social Links -->
 					<div class="social-links">
-						<a href="#" class="icon fb"></a> <!-- Facebook Link -->
-						<a href="#" class="icon tw"></a> <!-- Twitter Link -->
-						<a href="#" class="icon gh"></a> <!-- Github Link -->
-						<a href="#" class="icon cp"></a> <!-- Codepen Link -->
-						<a href="#" class="icon li"></a> <!-- Linkedin Link -->
-						<a href="#" class="icon dr"></a> <!-- Dribbble Link -->
-						<a href="#" class="icon be"></a> <!-- Behance Link -->
+						<a href="https://www.facebook.com/scott.snyder.18" class="icon fb"></a> <!-- Facebook Link -->
+						<!--<a href="#" class="icon tw"></a>  Twitter Link -->
+						<a href="https://github.com/sijos" class="icon gh"></a> <!-- Github Link -->
+						<!--<a href="#" class="icon cp"></a>  Codepen Link -->
+						<a href="https://www.linkedin.com/in/scott-j-snyder/" class="icon li"></a> <!-- Linkedin Link -->
+						<!--<a href="#" class="icon dr"></a>  Dribbble Link -->
+						<!--<a href="#" class="icon be"></a>  Behance Link -->
 					</div>
 				</div>
 			</div>
