--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 	<!-- Favicons Links -->
 	<!--<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">-->
-	<link rel="icon" type="image/png" href="img/favicons/favicon-s2.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="img/favicons/favicon-s2.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="img/favicons/s-icon.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="img/favicons/s-icon.png" sizes="16x16">
 	<link rel="manifest" href="img/favicons/manifest.json">
 	<!--<link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#f7465b">-->
 	<!--<link rel="shortcut icon" href="img/favicons/favicon.ico">-->
