update photorails project description

--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
 					        <h4>PhotoRails (in progress)</h4>
 					        <div class="separator"></div>
 					        <p class="para subtitle">Fullstack Web Developer</p>
-					        <p class="para project-description"> Basic photo sharing web app served on a custom built MVC framework based on Rails. <br> Created lightweight ORM for simple, streamlined database interactions. Utilized metaprogramming for a DRY implementation of basic Rails functionality. Includes routes/router, sessions data, flash, and CSRF protection.</p>
+					        <p class="para project-description"> Basic photo sharing web app served on a custom built MVC framework based on Rails. <br> Created lightweight ORM for simple, streamlined database interactions. Utilized metaprogramming for a DRY implementation of basic Rails functionality including routes/router, session data, flash, and CSRF protection.</p>
 					        <a href="#portfolio" class="btn btn-custom btn-custom-reverse">Live (coming soon)</a>
 					        <a href="https://github.com/sijos/myRails" class="btn btn-custom dark">Github</a>
 					      </div>
