add resume to assets and include downloadable link

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 				<div class="col-sm-12">
 					<h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-offset="200">Want to work together? Let's get in touch.</h3>
 					<a href="#contact" class="wow fadeInUp scroll-link btn btn-custom light outline-white" data-wow-duration="1s" data-wow-offset="200">Contact me</a>
-					<a href="#" class="wow fadeInUp btn btn-custom dark outline-white"  data-wow-duration="1s" data-wow-offset="200" data-wow-delay="0.2s"><i class="fa fa-download"></i> My resume</a>
+					<a href="assets/scott_snyder_resume.pdf" download class="wow fadeInUp btn btn-custom dark outline-white"  data-wow-duration="1s" data-wow-offset="200" data-wow-delay="0.2s"><i class="fa fa-download"></i> My resume</a>
 				</div>
 			</div>
 		</div>
