reword footer text

--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12">
-						<p class="para">&copy; preMa 2016 All Rights Reserved. Designed with <i class="fa fa-heart"></i> by Ahmed Beheiry</p>
+						<p class="para">&copy; Scott Snyder. Design by Ahmed Beheiry</p>
 					</div>
 				</div>
 			</div>
