update meta description and favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- IE compatibility -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Prema is a personal responsive portfolio template based on bootstrap v3.3.6">
+    <meta name="description" content="My personal portfolio site">
     <meta name="author" content="Ahmed Beheiry">
 
 	<title>Scott Snyder | Software Engineer</title>
@@ -16,7 +16,7 @@
 	<link rel="icon" type="image/png" href="img/favicons/s-icon.png" sizes="16x16">
 	<link rel="manifest" href="img/favicons/manifest.json">
 	<!--<link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#f7465b">-->
-	<!--<link rel="shortcut icon" href="img/favicons/favicon.ico">-->
+	<link rel="shortcut icon" href="img/favicons/s-icon.png">
 	<meta name="msapplication-config" content="img/favicons/browserconfig.xml">
 	<meta name="theme-color" content="#0c7cd5">
 
